Bug #4211
closedSome syslog facility names and symbols are missing
100%
Description
The syslog facility numbers 9, 10, 11, 12, and 14 are missing from /usr/include/sys/syslog.h . They have no symbols or names in syslogd or logger, or their man pages. Since other operating systems use these facilities, their symbols and names should be added to illumos for compatibility.
Updated by Gary Mills over 8 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 80
Where there were no conflicts, I decided to use the names and symbols already defined in BSD Unix. In the case of facility 9, where there is a conflict, I chose LOG_BSDCRON and bsdcron for those.
Updated by Gary Mills over 8 years ago
To be more generic, facility 9 will become LOG_ALTCRON and altcron.
The reason for adding the missing facility codes and names is to make syslog work better when syslog messages are forwarded from other systems. Without these changes, the only way to specify those facilities in syslog.conf is to use numbers, like this:
72.debug /var/log/cron 80.debug /var/log/auth 88.debug /var/log/daemon
With the changes, names can be specified instead.
Updated by Gary Mills over 8 years ago
- Status changed from In Progress to Pending RTI
- % Done changed from 80 to 100
Updated by Rich Lowe over 8 years ago
- Category set to lib - userland libraries
- Status changed from Pending RTI to Resolved
- Tags deleted (
needs-triage)
Resolved in ba91f08